Merge of grid into stable